@@ -22,6 +22,9 @@ plugin.tx_srfeuserregister_pi1 {
 	linkToPIDAddButton = {$plugin.tx_srfeuserregister_pi1.linkToPIDAddButton}
 	module_sys_dmail_category_PIDLIST = {$plugin.tx_srfeuserregister_pi1.module_sys_dmail_category_PIDLIST}
 	defaultCODE = {$plugin.tx_srfeuserregister_pi1.defaultCODE}
+	
+	useShortUrls = {$plugin.tx_srfeuserregister_pi1.useShortUrls}
+	shortUrlLife = {$plugin.tx_srfeuserregister_pi1.shortUrlLife}
 
 	formName = {$plugin.tx_srfeuserregister_pi1.formName}
 	onChangeCountryAttribute = {$plugin.tx_srfeuserregister_pi1.onChangeCountryAttribute}
@@ -166,6 +169,7 @@ plugin.tx_srfeuserregister_pi1 {
 		zip = trim
 		image = files
 		module_sys_dmail_html = setEmptyIfAbsent
+		module_sys_dmail_category = multiple
 		www = wwwURL
 		usergroup = multiple
 	}
